Fix about text color for dark mode

--- a/src/components/Home/About/styles.module.scss
+++ b/src/components/Home/About/styles.module.scss
@@ -40,6 +40,8 @@
 }
 
 .thing {
+  color: var(--theme-page-text);
+
   &::before {
     content: "﹣";
     color: var(--theme-color);
